--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
-title: Just the Docs Template
-description: A starter template for a Jeykll site using the Just the Docs theme!
+title: Just the Docs Exercise
+description: Step by step with just the docs
 theme: just-the-docs
 
-url: https://just-the-docs.github.io
+url: https://ola-szewczyk.github.io/just_the_docs_exercise
 
 aux_links:
-  Template Repository: https://github.com/just-the-docs/just-the-docs-template
+  Template Repository: https://github.com/ola-szewczyk/just-the-docs-template
